@@ -1,8 +1,8 @@
 Package: DEoptimR
-Version: 1.0-5
-Date: 2016-07-01
+Version: 1.0-6
+Date: 2016-07-05
 Title: Differential Evolution Optimization in Pure R
-Author: Eduardo L. T. Conceicao and Martin Maechler [ctb]
+Author: Eduardo L. T. Conceicao [aut, cre] and Martin Maechler [ctb]
 Maintainer: Eduardo L. T. Conceicao <mail@eduardoconceicao.org>
 Description: An implementation of a bespoke jDE variant of the
   Differential Evolution stochastic algorithm for global optimization of
@@ -13,8 +13,8 @@ License: GPL (>= 2)
 ByteCompile: yes
 Repository: CRAN
 Repository/R-Forge/Project: robustbase
-Repository/R-Forge/Revision: 722
-Repository/R-Forge/DateTimeStamp: 2016-06-30 20:12:15
-Date/Publication: 2016-07-01 01:20:22
+Repository/R-Forge/Revision: 728
+Repository/R-Forge/DateTimeStamp: 2016-07-05 14:38:06
+Date/Publication: 2016-07-06 01:09:27
 NeedsCompilation: no
-Packaged: 2016-06-30 20:25:21 UTC; rforge
+Packaged: 2016-07-05 15:25:22 UTC; rforge
