@@ -1,7 +1,7 @@
-5f9e61ec9ca1122780eaf924ea39593e *DESCRIPTION
+8f1eb1ad768326e2277334a866c54082 *DESCRIPTION
 e957909d8b7160ad012b9ffd6d073b10 *NAMESPACE
-02c33bcef3d1516ec0e2993d0492b1cb *R/JDEoptim.R
-d2cc5e64a055eb23d01fa29cca97f5cf *inst/NEWS.Rd
+135be8835a40cfeab6e57579ee671d89 *R/JDEoptim.R
+849572cd1a881420ddf27c46d8ce59c2 *inst/NEWS.Rd
 b4a11b18bccefaffdfe2874c61b951a3 *inst/xtraR/opt-test-funs.R
-ad4f899732d2a29ab158bc7dde20643b *man/JDEoptim.Rd
+69ae71c675c2ff217787206c2e35d17c *man/JDEoptim.Rd
 5daa4617c3caed9a2354487ec6079026 *tests/JDEoptim-tst.R
