@@ -1,6 +1,12 @@
 \name{NEWS}
 \title{News for package 'DEoptimR'}
 
+\section{Changes in DEoptimR version 1.0-6 (2016-07-05)}{
+  \itemize{
+    \item Argument \code{FUN} renamed to \code{compare_to}.
+  }
+}
+
 \section{Changes in DEoptimR version 1.0-5 (2016-07-01)}{
   \itemize{
     \item Arguments \code{tau1}, \code{tau2} and \code{tau3} renamed to
